fix: updated css overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -794,15 +794,21 @@ textarea::-ms-input-placeholder {
 }
 
 .sidebar-content {
-    height: calc(100vh - 6.5rem);
+  height: calc(100vh - 6.5rem);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .sidebar-detail {
-    height: calc(100vh - 3.5rem);
+  height: calc(100vh - 3.5rem);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .main-content {
-    height: calc(100vh - 7.25rem);
+  height: calc(100vh - 7.25rem);
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .sidebar-list:hover .button-dropdown {
